# ProjectPracticum

./: 1.html  2.html  3.html  CMakeLists.txt  README.md  html.html  title.qml  titleActivity.cpp
qml/: EnteryActivity.qml  MainActivity.qml  TestFrame.qml  Title.qml
qml/Component/: BoxFrame.qml  CustomRadioButton.qml  CustomTextField.qml  ImgButton.qml  MaterialText.qml  QuestionFrame.qml  SaveButton.qml  TaskText.qml  TextButton.qml
qml/EnteryActivity/: EnteryActivity.qml  RegistrationFragment.qml  SignInFragment.qml
qml/NavigationActivity/: NavigationActivity.qml  NavigationSideBar.qml
qml/NavigationActivity/NavigationFrame/: StatisticFrame.qml  TestFrame.qml  TestStartFrame.qml  Theory.qml  Title.qml
qml/QuestionFrames/: EndTestFrame.qml  Question1.qml  Question10.qml  Question2.qml  Question3.qml  Question4.qml  Question5.qml  Question6.qml  Question7.qml  Question8.qml  Question9.qml
src/: MainActivity.cpp  SettingsManager.cpp  SettingsManager.h  SqliteDataBase.cpp  SqliteDataBase.h  UserStatisticModel.cpp  UserStatisticModel.h
